# confusables

./: .gitignore  LICENSE  README.md  pyproject.toml
src/confusables/: __init__.py  config.py  parse.py  utils.py
src/confusables/assets/: confusable_mapping.json
tests/confusables/: test_confusables.py
