[build-system]
requires = ["hatchling", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[project]
name = "confusables"
requires-python = ">=3.10"
description = "A python package providing functionality for matching words that can be confused for eachother, but contain different characters"
dependencies = []
dynamic = ["version", "urls", "readme"]
authors = [
    {name = "Nathan Woodger", email = "woodgern@gmail.com"},
    {name = "Paillat-dev", email = "me@paillat.dev"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]


[dependency-groups]
dev = [
    "basedpyright>=1.38.2",
    "ruff>=0.15.5",
    "tox>=4.49.1",
]
test = []

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/confusables/_version.py"

[tool.hatch.metadata.hooks.vcs.urls]
Homepage = "https://github.com/nicebots-xyz/confusables"
"Source code" = "https://github.com/nicebots-xyz/confusables/archive/{commit_hash}.zip"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\[(.+?)\]\(((?!https?://)\S+?)\)'
replacement = '[\1](https://github.com/nicebots-xyz/confusables/tree/master\g<2>)'

[tool.hatchling]
name = "confusables"

[tool.hatch.build]
include = [
    "src/confusables/",
    "src/confusables/assets/*.txt",
    "src/confusables/assets/*.json",
]
exclude = [
    ".github",
    ".python-version",
    "uv.lock",
    "pnpm-lock.yaml",
    "package.json",
    ".gitignore"
]

[tool.hatch.build.targets.wheel]
packages = ["src/confusables"]

[tool.pyright]
venv = ".venv"
reportAny = false
reportUnusedCallResult = false
reportMissingTypeStubs = false
pythonVersion = "3.10"
executionEnvironments = [
    { root = "src/confusables/_version.py", reportDeprecated = false },
]

[tool.ruff]
target-version = "py310"
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
exclude = [
    "confusables/_version.py"
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
extend-ignore = [
    "COM812",
    "ISC003"
]
[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # assert-used
    "RUF001", # ambiguous-unicode-character-string
    "D100", # undocumented-public-module
    "D101", # undocumented-public-class
    "D102", # undocumented-public-method
    "D103", # undocumented-public-function
    "D104", # undocumented-public-package
]

[tool.tox]
requires = ["tox>=4"]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
description = "run unit tests"
commands = [["python", "-m", "unittest", "discover"]]
dependency_groups = ["test"]

[tool.tox.gh.python]
"3.13" = ["3.13"]
